--- a/app/views/social_construct/previews/index.html.erb
+++ b/app/views/social_construct/previews/index.html.erb
@@ -23,7 +23,7 @@
                   <div class="flex items-center justify-between">
                     <div>
                       <p class="text-lg font-medium text-indigo-600 hover:text-indigo-500">
-                        <%= preview_class.name.humanize %>
+                        <%= preview_class.name.sub(/Preview$/, '').underscore.humanize %>
                       </p>
                       <p class="mt-1 text-sm text-gray-500">
                         <%= preview_class.name %>
