--- a/lib/generators/social_construct/install/templates/social_cards_layout.html.erb
+++ b/lib/generators/social_construct/install/templates/social_cards_layout.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="<%= I18n.locale %>">
+<html lang="<%%= I18n.locale %>">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -41,10 +41,10 @@
         margin: 0;
       }
     </style>
-    <%= yield :head %>
+    <%%= yield :head %>
   </head>
   <body>
-    <%= yield %>
+    <%%= yield %>
   </body>
 </html>
 
